# imp

./: .gitignore  .gitleaks.toml  4-28-idea.md  AGENTS.md  CHANGELOG.md  Cargo.toml  Cargo.workspace.toml  LEARNING_LOOP_SPEC.md  README.md  build.rs  draft.html  imp-gui-wireframe.html  imp_ontology.md  imp_rebuild_plan.md  imp_rebuild_strategy.md  ontology.md  tmp-find-django.sh  vNext.md  wireframe.txt
.github/workflows/: edge.yml  release.yml
.mana/: .1-modeless-tui-text-selection-with-scroll-and-sideba.md  .1.2-build-shared-rendered-text-snapshots-for-selectabl.md  .1.3-implement-modeless-mouse-selection-scroll-and-side.md  .1.4-add-keyboard-native-selection-and-copy-workflows.md  .1.5-polish-copy-semantics-and-discoverability-for-sele.md  .10-define-clean-mana-vs-imp-boundary-and-memory-conso.md  .10.2-design-a-mana-wiki-schema-and-knowledge-maintenance-workflow.md  .10.3-strengthen-mana-first-prompt-doctrine-for-durable-planning.md  .10.4-design-mana-aware-runtime-context-read-path-for-prompt-assembly.md  .10.5-design-inline-mana-state-and-knowledge-surfaces-for-imp-runtime.md  .2-add-structured-personality-customization-and-profi.md  .2.1-design-personality-config-model-scopes-and-profile.md  .2.2-render-structured-personality-into-imp-system-prom.md  .2.3-build-personality-sentence-editor-and-slider-ui-in.md  .2.4-add-personality-profiles-and-scope-aware-switching.md  .2.5-document-and-polish-personality-customization-defa.md  .3-set-up-harbor-adapter-and-terminal-bench-20-runner.md  .4.1-define-compacted-history-semantics-in-imp-core-ses.md  .4.2-implement-safe-pre-summary-compaction-pipeline-for.md  .4.3-implement-local-structured-summarizer-and-compacti.md  .4.4-integrate-compacted-history-into-imp-context-assem.md  .4.5-ship-a-real-compact-slash-command-flow-in-the-imp.md  .4.6-test-and-document-compacted-branch-behavior-end-to.md  .4.7-add-provider-specific-optimization-seam-for-future.md  .5-add-safe-automatic-context-compaction-for-long-run.md  .5.1-add-disabled-by-default-auto-compaction-config-sca.md  .6-hardening-pass-reduce-bugs-and-contract-mismatches.md  .6.1-fix-current-imp-core-library-test-failures.md  .6.2-harden-auth-store-persistence-and-error-handling.md  .6.3-audit-and-align-built-in-tool-registration.md  .6.4-reduce-current-clippy-warning-backlog-in-low-risk.md  .6.6-enforce-lua-extension-capability-boundaries.md  .6.7-propagate-cancellation-into-active-tool-execution.md  .6.8-align-diff-tool-registration-with-mode-contracts.md  .9-upgrade-imp-mana-authoring-prompt-contract-for-orc.md  18-imp-efficiency-compress-tool-descriptions-2600-150.md  21-imp-efficiency-smarter-tool-output-truncation.md  22-bug-compactionresume-tests-hang-due-to-mock-provid.md  245.1-define-manaimp-contract-implications-of-file-nativ.md  245.1.1-define-vnext-manaimp-subagent-handoff-packet-for-o.md  (+348 more)
.mana/migration-conflicts/: 267-fix-native-imp-worker-openai-route-failure-when-sp.md.txt  270-make-uu-install-support-active-shell-binary-repair.md.txt  271-harden-spawn-and-mana-tool-termination-so-closespa.md.txt  273-make-pi-typescript-extensions-importable-into-imp.md.txt  44-rethink-imp-extensions-as-guest-runtimes-with-opti.md.txt
crates/imp-cli/: .gitignore  Cargo.toml  README.md  auth.json
crates/imp-cli/src/: lib.rs  main.rs  stats_report.rs  usage_report.rs
crates/imp-cli/src/acp/: events.rs  mod.rs  protocol.rs
crates/imp-cli/tests/: workflow_cli.rs
crates/imp-core/: Cargo.toml  README.md
crates/imp-gui/: Cargo.toml  README.md
crates/imp-gui/src/: lib.rs  main.rs
crates/imp-llm/: Cargo.toml  README.md
crates/imp-llm/src/: auth.rs  lib.rs  model.rs  provider.rs
crates/imp-llm/src/oauth/: anthropic.rs  chatgpt.rs  kimi_code.rs  mod.rs
crates/imp-llm/src/providers/: anthropic.rs  google.rs  mod.rs  openai.rs  openai_codex.rs  openai_compat.rs
crates/imp-lua/: Cargo.toml  README.md
crates/imp-lua/src/: bridge.rs  lib.rs  loader.rs  sandbox.rs
crates/imp-tui/: Cargo.toml  README.md
crates/imp-tui/src/: animation.rs  app.rs  event_source.rs  interactive.rs  keybindings.rs  lib.rs  repo_stats.rs  selection.rs  terminal.rs  tui_interface.rs  turn_tracker.rs
crates/imp-tui/src/app/: event_kinds.rs  git_status.rs  helpers.rs  model_auth.rs  state_types.rs  verification_status.rs
crates/imp-tui/src/views/: ask_bar.rs  chat.rs  command_palette.rs  editor.rs  login_picker.rs  mana_navigator.rs  mod.rs  model_selector.rs  personality.rs  secrets_picker.rs  session_picker.rs  settings.rs  sidebar.rs  startup.rs  tool_output.rs  tools.rs  top_bar.rs  tree.rs  welcome.rs
crates/imp-work/: Cargo.toml  README.md
crates/imp-work/examples/: migrate_mana_to_imp_work.rs
crates/imp-work/src/: context_pack.rs  event.rs  global_store.rs  lib.rs  mana_shadow.rs  memory.rs  model.rs  prepared_prototype.rs  prepared_worker.rs  prototype.rs  run_engine.rs  runtime.rs  scheduler.rs  store.rs  workflow.rs
crates/mcp-shim/: Cargo.toml
docs/: acp.md  architecture.md  autonomy-modes.md  child-workflow-delegation.md  dependency-audit.md  eval-candidates.md  extensions-lua.md  imp-next-workflow-runtime.md  index.md  mana-next-compatibility-adapter.md  mana-next-examples.md  mana-next-migration-test-plan.md  mana-next-runtime-event-mapping.md  mana-next-storage-strategy.md  mana-next-ux.md  mana-next-workflow-ledger.md  policy.md  reference-monitor-policy.md  role-registry.md  rpc.md  run-evidence.md  runtime-event-state-api.md  sessions.md  tools.md  trace-and-evidence-format.md  trust-labels-and-provenance.md  tui-workflow-wireframes.md  typescript-extension-bridge.md  verification-gates.md  workflow-first-ux.md  workflow-profiles.md  workflows.md  worktree-auto.md
docs/design/: dirac-inspired-code-tools.md  droid-gap-map-and-imp-roadmap.md  droid-mission-mode-vs-imp-work-plan.md  imp-host-sync-mirror-daemon.md  imp-native-workflow-engine.md  imp-semantic-write-execution-contract.md  imp-work-global-store.md  (+7 more)
scripts/: migrate-mana-to-imp-work
src/: main.rs
tools/: README.md  imp-fix-signature.sh  release_commit_board.py  uu-post-install.sh
(+437 files in other folders)
