[package]
name = "imp-install"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Source-install shim so `cargo install --path .` and `uu install` work from the imp repo root"
publish = false

[[bin]]
name = "imp"
path = "src/main.rs"

[dependencies]
imp-cli.workspace = true
tokio.workspace = true

[workspace]
resolver = "2"
default-members = [
    "crates/imp-llm",
    "crates/imp-core",
    "crates/imp-lua",
    "crates/imp-tui",
    "crates/imp-cli",
]
members = [
    "crates/imp-llm",
    "crates/imp-core",
    "crates/imp-lua",
    "crates/imp-tui",
    "crates/imp-cli",
]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/kfcafe/imp"
homepage = "https://github.com/kfcafe/imp"
readme = "README.md"
keywords = ["agent", "coding", "llm", "terminal", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
futures-core = "0.3"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
tungstenite = "0.27"
toml = "0.8"
similar = "2"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "send"] }
ignore = "0.4"
rayon = "1"
url = "2"
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
readability-rust = "0.1"
project-detect = "0.1"
mana-core = { version = "0.3.1", path = "../mana/crates/mana-core" }

imp-llm = { version = "0.1.4", path = "crates/imp-llm" }
imp-core = { version = "0.1.4", path = "crates/imp-core" }
imp-lua = { version = "0.1.4", path = "crates/imp-lua" }
imp-tui = { version = "0.1.4", path = "crates/imp-tui" }
imp-cli = { version = "0.1.4", path = "crates/imp-cli" }
