[package]
name = "imp-install"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Source-install shim so `cargo install --path .` and `uu install` work from the imp repo root"
publish = false
include = ["Cargo.toml", "src/main.rs", "README.md"]

[[bin]]
name = "imp"
path = "src/main.rs"

[dependencies]
imp-cli.workspace = true
tokio.workspace = true

[workspace]
resolver = "2"
default-members = [
    "crates/imp-llm",
    "crates/imp-core",
    "crates/imp-lua",
    "crates/imp-tui",
    "crates/imp-cli",
]
members = [
    "crates/imp-llm",
    "crates/imp-core",
    "crates/imp-lua",
    "crates/imp-tui",
    "crates/imp-cli",
    "crates/imp-gui",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/kfcafe/imp"
homepage = "https://github.com/kfcafe/imp"
readme = "README.md"
keywords = ["agent", "coding", "llm", "terminal", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
futures-core = "0.3"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
wait-timeout = "0.2"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
tungstenite = "0.27"
toml = "0.8"
similar = "2"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
eframe = "0.31"
egui = "0.31"
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "send"] }
ignore = "0.4"
rayon = "1"
url = "2"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-bash = "0.25"
tree-sitter-elixir = "0.3"
tree-sitter-ruby = "0.23"
tree-sitter-ocaml = "0.25"
tree-sitter-perl = "1.1"
tree-sitter-lua = "0.5"
tree-sitter-zig = "1.1"
tree-sitter-odin = "1.3"
tree-sitter-swift = "0.7"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-php = "0.24"
tree-sitter-scala = "0.26"
tree-sitter-dart = "0.2"
readability-rust = "0.1"
project-detect = "0.1"
mana-core = "0.3.2"

imp-llm = { version = "0.3.0", path = "crates/imp-llm" }
imp-core = { version = "0.3.0", path = "crates/imp-core" }
imp-lua = { version = "0.3.0", path = "crates/imp-lua" }
imp-tui = { version = "0.3.0", path = "crates/imp-tui" }
imp-gui = { version = "0.3.0", path = "crates/imp-gui" }
imp-cli = { version = "0.3.0", path = "crates/imp-cli" }
