[package]
name = "imp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for the imp coding agent"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
exclude = ["auth.json"]

[[bin]]
name = "imp"
path = "src/main.rs"

[features]
default = []

[dependencies]
imp-llm.workspace = true
imp-core.workspace = true
imp-tui.workspace = true
imp-lua.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
futures.workspace = true
futures-util = "0.3"
async-trait.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
