[package]
name = "imp-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native GUI for the imp coding agent"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "imp-gui"
path = "src/main.rs"

[dependencies]
eframe.workspace = true
egui.workspace = true
imp-core.workspace = true
mana-core.workspace = true
serde.workspace = true
thiserror.workspace = true
