[package]
name = "imp-llm"
license = "Apache-2.0"
version.workspace = true
edition.workspace = true
description = "Standalone multi-provider LLM streaming client"

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
futures-core.workspace = true
futures.workspace = true
reqwest.workspace = true
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6", features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", features = ["windows-native"] }

[dev-dependencies]
tempfile = "3"
