[package]
name = "imp-llm"
license.workspace = true
version.workspace = true
edition.workspace = true
description = "Standalone multi-provider LLM streaming client"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tungstenite.workspace = true
futures-core.workspace = true
futures.workspace = true
reqwest.workspace = true
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6", features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", features = ["windows-native"] }

[dev-dependencies]
tempfile = "3"
