[package]
name = "imp-lua"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lua extension runtime for imp"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
imp-core.workspace = true
imp-llm.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
mlua.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile = "3"
