[package]
name = "imp-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for the imp coding agent"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
imp-core.workspace = true
serde.workspace = true
imp-llm.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
futures.workspace = true
ratatui.workspace = true
crossterm.workspace = true
walkdir.workspace = true
uuid.workspace = true
async-trait.workspace = true
syntect = "5"
unicode-width = "0.2"
imp-lua.workspace = true
mana-core.workspace = true

[dev-dependencies]
tempfile = "3"
