[package]
name = "imp-work"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native imp work graph primitives: tasks, memory, prototypes, context packs, and orchestration"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
